@@ -25,7 +25,7 @@ all: $(SOURCES) $(TARGET)
 
 $(TARGET): $(OBJECTS)
 	$(LINK) $(LDFLAGS) $(OBJECTS) $(LIBS) -o $@
-	zaurus/_buildipk
+	zaurus/build-$(TARGET)
 
 %.o: %.c 
 	$(CC) $(CFLAGS) -c $< -o $@
