@@ -1,0 +1,38 @@
+Open81 - A free firmware for the Timex TS1000 / Sinclair ZX81
+Copyright (C) 1981 Nine Tiles Networks Ltd.
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along
+with this program; if not, write to the Free Software Foundation, Inc.,
+51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
+Open81 was written by Steve Vickers and John Grant.
+
+
+open81.asm is the Open81 ROM, a GPL version of the "improved" ZX81 ROM.
+See https://sites.google.com/site/open81rom/
+
+
+Assembling
+==========
+
+Firstly you'll need to install the Pasmo Z80 cross-assembler.
+
+    http://www.arrakis.es/~ninsesabe/pasmo/
+
+Then execute "make" or "make open81" from the root of the source package
+to initiate the following:
+
+ * open8x/open81.asm is assembled to open8x/open81.rom
+ * If data/zx81.rom is not found to exist then open8x/open81.rom is
+   copied to data/zx81.rom.
+
